# agent-system-dissect

./: .gitattributes  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  GEMINI.md  README.md  pyproject.toml
context/: README.md
context/design/: README.md  arch-codex-rs-agent-system.md
context/design/arch-codex-rs-agent-system/: class-diagram.mmd  package-diagram.mmd  sequence-user-turn-tool-call.mmd
context/design/codex/: arch-codex-rs-agent-system.md
context/hints/: README.md
context/instructions/: README.md
context/issues/: README.md
context/issues/known/: README.md  issue-codex-bundled-ca-blocks-mitm.md
context/issues/resolved/: README.md
context/logs/: README.md
context/plans/: README.md
context/refcode/: README.md
context/roles/: README.md
context/rules/: README.md
context/summaries/: README.md
context/summaries/codex-kb/: howto-build-codex-from-extern-tracked.md  howto-integrate-codex-into-python-application.md
context/summaries/flashinfer-kb/: howto-run-flashinfer-from-extern-tracked.md
context/tasks/: README.md
context/tasks/backlog/: README.md
context/tasks/done/: README.md
context/tasks/working/: README.md
context/tools/: README.md
docs/tutorials/misc/codex-python-calls/: tut-codex-python-calls.md
docs/tutorials/misc/codex-python-calls/inputs/: cases.json
docs/tutorials/misc/codex-python-calls/outputs/: conversation-inspection.json  result-app-server.json  result-exec-persistent.json  result-exec-stateless.json  summary.json
docs/tutorials/misc/codex-python-calls/scripts/: run.py
docs/tutorials/probe/traffic-capture/: tut-traffic-capture.md
docs/tutorials/probe/traffic-capture/inputs/: sample_traffic.jsonl
docs/tutorials/probe/traffic-capture/outputs/: sample_report.md
docs/tutorials/probe/traffic-capture/scripts/: analyze_sample.sh  analyze_traffic.sh  capture_codex.sh  run_full_workflow.sh
openspec/changes/analyze-codex-openai-traffic/: design.md  proposal.md  tasks.md
openspec/changes/analyze-codex-openai-traffic/specs/traffic-analysis/: spec.md
openspec/changes/analyze-codex-openai-traffic/specs/traffic-capture/: spec.md
openspec/changes/archive/2026-02-12-add-flashinfer-dev-pixi-env/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-12-analyze-codex-openai-traffic/: tasks.md
openspec/changes/archive/2026-02-12-analyze-codex-openai-traffic/specs/traffic-capture/: spec.md
openspec/changes/promote-traffic-scripts/: design.md  proposal.md  tasks.md
openspec/changes/promote-traffic-scripts/specs/openai-body-renderer/: spec.md
openspec/changes/promote-traffic-scripts/specs/traffic-analysis/: spec.md
openspec/changes/promote-traffic-scripts/specs/traffic-capture/: spec.md
openspec/changes/promote-traffic-scripts/specs/traffic-tool-framework/: spec.md
openspec/specs/flashinfer-dev-environment/: spec.md
scripts/probe/codex/: run_capture.sh
scripts/probe/flashinfer/: preflight.sh  smoke.py
src/agent_system_dissect/probe/renderers/: openai_responses.py
src/agent_system_dissect/probe/targets/codex/: traffic.py
src/agent_system_dissect/probe/tools/traffic/: analyze.py  capture_addon.py  runner.py  sse.py  types.py
tests/integration/probe/codex/: test_traffic_capture.py
