[project]
authors = [{name = "igamenovoer", email = "igamenovoer@xx.com"}]
dependencies = ["scipy>=1.17.0,<2", "mdutils>=1.8.1,<2", "ruff>=0.15.0,<0.16", "mypy>=1.19.1,<2"]
name = "agent-system-dissect"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
agent_system_dissect = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
python = "3.13.*"
